<resources>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="app_name">LockScreenApp</string>
    <string name="tryagain"> Error Try Again </string>

    <string name="wrongpatter"> Wrong Pattern Try Again</string>
    <string name="drawpattern">  Draw Pattern </string>
    <string name="redrawpattern">  ReDraw Pattern </string>

    <string name="selectanswer">Select your security question ?  </string>
    <string name="one">What is your pet name ?</string>
    <string name="two">Who is your favorite teacher ? </string>
    <string name="three">Who is your favorite actor ? </string>
    <string name="four">Who is your favorite actress ? </string>
    <string name="five">Who is your favorite cricketer ? </string>
    <string name="six">Who is your favorite footballer ? </string>

    <string name="pleaseselectanswer">Please select a question and write an answer </string>
    <string name="recoverr">RECOVER</string>
    <string name="enteranswer">Enter your answer here </string>

    <string name="confirmpass">confirm </string>

    <string name="forgetpass">Forget Password </string>
    <string name="CONFIRM">Confirm </string>
    //
    <string name="required">This will be required to recover password, if in case you forget password </string>
    <string name="save">save</string>
    <string name="enter_title_here">Enter Title here..</string>
    <string name="enter_description_here">Enter Description here..</string>
    <string name="my_mood_today">My Mood Today</string>
    <string name="backgrounds">Backgrounds</string>
    <string name="text_styling">Text Styling</string>
    <string name="tags">Tags</string>
    <string name="tag_like_fun_family_and_press_enter">Tag like(fun, family) and press enter</string>
    <string name="social">Social</string>
    <string name="update">Update</string>
    <string name="fingerprint_title">Identification</string>
    <string name="fingerprint_message">Please scan your finger</string>
    <string-array name="Spinner">
        <item>Hellow</item>
        <item>Hellow</item>
        <item>Hellow</item>
        <item>Hellow</item>
        <item>Hellow</item>
        <item>Hellow</item>
    </string-array>
    <string name="title_activity_maps">MapsActivity</string>
</resources>