<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textSize="12dp"
        android:background="@color/fbutton_color_alizarin"
        android:text="@string/pleaseselectanswer"
        android:id="@+id/textView3" />

    <Spinner
        android:id="@+id/questionssSpinner"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:layout_margin="12dp" />

    <EditText
        android:id="@+id/answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:textColorHint="@color/white"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:hint="@string/enteranswer" />


    <Button
        android:id="@+id/confirmButton"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_margin="32dp"
        android:text="@string/recoverr"
        android:textSize="20dp"
        android:textColor="@color/white"
        app:buttonColor="@color/themebooster"
        app:cornerRadius="5dp"
        app:shadowEnabled="true"
        app:shadowHeight="4dp" />


</LinearLayout>
